--- a/client/src/components/navbar/index.css
+++ b/client/src/components/navbar/index.css
@@ -1,4 +1,5 @@
 .MuiAppBar-colorPrimary {
 	color: black;
-	background-color: #d24b27 !important;
+	background-color: rgb(169,25,131) !important;
 }
+/*  */
