updated the navbar logo, updated the mobile navbar icons

--- a/client/src/components/navbar/index.css
+++ b/client/src/components/navbar/index.css
@@ -1,5 +1,8 @@
 .MuiAppBar-colorPrimary {
 	color: black;
-	background-color: rgb(169,25,131) !important;
+	background-color: rgb(169, 25, 131) !important;
 }
-/*  */
+
+/* .MuiAvatar-root {
+	width: 90px !important;
+} */
