--- a/client/src/components/navbar/index.css
+++ b/client/src/components/navbar/index.css
@@ -3,7 +3,7 @@
 	background-color: rgb(169, 25, 131) !important;
 }
 
-.MuiAvatar-root {
-	width: 70px !important;
+.logo-title {
+	width: 60px !important;
 	height: 40px !important;
 }
