fixed the theme

--- a/client/src/components/navbar/index.css
+++ b/client/src/components/navbar/index.css
@@ -1,6 +1,6 @@
 .MuiAppBar-colorPrimary {
 	color: black;
-	background-color: rgb(169, 25, 131) !important;
+	background-color: #9fa8da  !important;
 }
 
 .logo-title {
